# app/Models/SecondVariantCombination.php
@@ -2,10 +2,44 @@
 
 namespace App\Models;
 
+use App\Observers\SecondVariantCombinationObserver;
+use Illuminate\Database\Eloquent\Attributes\ObservedBy;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Relations\Pivot;
 
+#[ObservedBy(SecondVariantCombinationObserver::class)]
 class SecondVariantCombination extends Pivot
 {
+    /**
+     * Indicates if the IDs are auto-incrementing.
+     *
+     * @var bool
+     */
+    public $incrementing = true;
+
     use HasFactory;
+
+    public function getProduct(): Product
+    {
+        return Product::query()
+            ->with([
+                'variants' => [
+                    'variantValues' => [
+                        'variant',
+                        'combinations' => [
+                            'combinations',
+                        ],
+                        'late_combinations',
+                    ],
+                ],
+            ])
+            ->whereHas('variants', function ($query) { // select the product that has variants that has varian_value with id of $newly_created_variant_value
+                $query->whereHas('variantValues', function ($query) {
+                    $query->whereHas('late_combinations', function ($query) {
+                        $query->where('id', $this->id);
+                    });
+                });
+            })
+            ->first();
+    }
 }
